# isthegymbusy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  sqlx-data.json
.github/workflows/: cd.yml
.sqlx/: query-02e4c1dbc061cdd1dfae016253ea80aad67987f2145e42a49539b65c4c7fde7c.json  query-3a977b5f1541a32d3d96549509bf0001608020651ce93c0fa4a325bc6672183f.json  query-55c668156a1bff852bb4d090bbb67bcc46d1a5dc3fdd2985b8db19ce2a2edab4.json  query-8e7c1f895c6dfc73d9a1440d3507ace80580eab904b5cc632c98bfc567e4ee2e.json  query-9d1fb1fcfc26eb44d12cbde9e79c8466e14d57a74b069cab2eb41e0acabf3307.json  query-a1ca2a0a7312faa1ee12c9945b8c6bc7135a56d2b99c9943ae1b8c40886b6660.json  query-a4c95a6561a1eb283bc8c7a9fdd2dd163e544472062a0f63ffc559cea3142667.json  query-bdda7a501abe17af63ae4a97ad41f3c35f4bfd5b3178708644975f20b4b6d700.json
firedbg/: target.json
functions/: hello.js
migrations/: 20230430162631_measurements.sql
src/: config.rs  database.rs  history.rs  lib.rs  main.rs  routes.rs  status.rs
src/routes/: history.rs  index.rs  mod.rs  static_files.rs  status.rs
src/routes/history/: average.rs  mod.rs  today.rs  year.rs
static/: index.html  main.js  style.css
