[package]
name = "isthegymbusy"
version = "0.0.0"
edition = "2021"
default-run = "isthegymbusy"

[profile.release]
lto = "thin"

[dependencies]
axum =  "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
] }

sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }

config = "0.14.1"
dotenv = "0.15.0"

color-eyre = "0.6.3"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sentry = { version = "0.34.0", features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
], default-features = false }
sentry-tracing = { version = "0.34.0", features = [
    "backtrace",
], default-features = false }

displaydoc = "0.2.5"
thiserror = "1.0.65"

serde = { version = "1.0.214", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
] }
regex = "1.11.1"
include_dir = "0.7.4"
mime_guess = "2.0.5"
chrono = "0.4.38"
